backend/kubernates-configs/k8s-mongo.yml
# Configure 'Deployment' of mysql server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: mongodb
    tier: database
spec:
  selector: # mysql Pod Should contain same labels
    matchLabels:
      app: mongodb
      tier: database
  template:
    metadata:
      labels: # Must match 'Service' and 'Deployment' selectors
        app: mongodb
        tier: database
    spec:
      containers:
        - image: mongo # image from docker-hub
          # args:
          #   - "--ignore-db-dir=lost+found" # Workaround for https://github.com/docker-library/mysql/issues/186
          name: mongodb
          ports:
            - containerPort: 27017

---
# Define a 'Service' To Expose mysql to Other Services
apiVersion: v1
kind: Service
metadata:
  name: mongodb # DNS name
  labels:
    app: mongodb
    tier: database
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector: # mysql Pod Should contain same labels
    app: mongodb
    tier: database
  clusterIP: None # We Use DNS, Thus ClusterIP is not relevant
