backend/kubernates-configs/k8s-postgres.yml
# Configure 'Deployment' of postgres server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresdb
  labels:
    app: postgresdb
    tier: database
spec:
  selector:
    matchLabels:
      app: postgresdb
      tier: database
  template:
    metadata:
      labels:
        app: postgresdb
        tier: database
    spec:
      containers:
        - image: postgres:15
          name: postgresdb
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
            - name: pg-initdb-sql
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
        - name: pg-initdb-sql
          configMap:
            name: postgres-initdb-config
            defaultMode: 420
---
# Define a 'Service' To Expose postgres to Other Services
apiVersion: v1
kind: Service
metadata:
  name: postgresdb # DNS name
  labels:
    app: postgresdb
    tier: database
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgresdb
    tier: database
  clusterIP: None
