backend/kubernates-configs/transaction-service.yml
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  labels:
    app: transaction-service
spec:
  selector:
    app: transaction-service
  type: ClusterIP
  ports:
    - port: 8090
      targetPort: 8090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
spec:
  selector:
    matchLabels:
      app: transaction-service
  replicas: 1
  template:
    metadata:
      labels:
        app: transaction-service
    spec:
      containers:
        - name: transaction-service
          image: docker.io/library/transaction-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8090
          env: # Setting Enviornmental Variables
            - name: MONGO_DB_USERNAME # Setting Database name from configMap
              value: root

            - name: MONGO_DB_PASSWORD # Setting Database username from Secret
              value: password

            - name: MONGO_DB_HOST # Setting Database password from Secret
              value: mongodb
            - name: EUREKA_HOST
              value: discovery-server
