backend/kubernates-configs/user-service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  selector:
    app: user-service
  #type: NodePort
  ports:
    - port: 8091
      targetPort: 8091
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  selector:
    matchLabels:
      app: user-service
  replicas: 1
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: docker.io/library/user-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8091
          env: # Setting Enviornmental Variables
            - name: POSTGRES_DB_HOST # Setting Database host address from configMap
              value: postgresdb
            - name: POSTGRES_DB_USERNAME # Setting Database name from configMap
              value: postgres
            - name: POSTGRES_DB_PASSWORD # Setting Database password from Secret
              value: postgres
            - name: EUREKA_HOST
              value: discovery-server
